--- a/index.html
+++ b/index.html
@@ -54,8 +54,12 @@
                </div>
             </div>
 
+            <!-- toggle from light to dark -->
             <div class="nav_actions">
-               <i class="ri-heart-line"></i>
+               <div class="theme-toggle" id="theme-toggle">
+                  <input type="checkbox" id="theme-switch">
+                  <i class="fa-solid fa-toggle-on"></i>
+              </div>
 
                <!-- shopping cart -->
                <div class="icon-cart" id="cart-menu">
@@ -271,7 +275,7 @@
                               </h2>
                
                               <div class="contact_content">
-                                 <div>
+                                 <div class="contact_write">
                                     <h3 class="contact_title_card">Write to us</h3>
                
                                     <div class="contact_social">
