--- a/index.html
+++ b/index.html
@@ -350,7 +350,8 @@
 
 
    <!--=============== MAIN JS ===============-->
-
+   <script src="assets/js/main.js"></script>
+   <script src="assets/js/validate.js"></script>
 </body>
 
 </html>
