--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 
                               <div class="contact_content">
                                  <div class="contact_write">
-                                    <h3 class="contact_title_card">Write to us</h3>
+                                    <h3 class="contact_title_card">Follow Us On Social Media</h3>
 
                                     <div class="contact_social">
                                        <a href="https://www.instagram.com/" target="_blank">
@@ -313,23 +313,49 @@
                                        </a>
                                     </div>
                                  </div>
-
-                                 <div>
-                                    <h3 class="contact_title_card">Call us</h3>
-
-                                    <address class="contact_info">
-                                       +1 (012) 345-6789 <br>
-                                    </address>
-                                 </div>
-
-                                 <div>
-                                    <h3 class="contact_title_card">Find us here</h3>
-                                    <address class="contact_info">
-                                       800 W University Pkwy, Orem, <br>
-                                       UT 84058
-                                    </address>
-                                 </div>
-
+                                 <form>
+                                    <h2>Contact Us</h2>
+                                    <div>
+                                       <label for="firstName">First Name</label>
+                                       <input type="text" id="firstName" name="firstName">
+                                    </div>
+                                    <div>
+                                       <label for="lastName">Last Name</label>
+                                       <input type="text" id="lastName" name="lastName">
+                                    </div>
+                                    <div>
+                                       <label for="address">Address</label>
+                                       <input type="text" id="address" name="address">
+                                    </div>
+                                    <div>
+                                       <label for="city">City</label>
+                                       <input type="text" id="city" name="city">
+                                    </div>
+                                    <div>
+                                       <label for="state">State</label>
+                                       <input type="text" id="address" name="address">
+                                    </div>
+                                    <div>
+                                       <label for="zip">Zip Code</label>
+                                       <input type="text" id="zip" name="zip">
+                                    </div>
+                                    <div>
+                                       <label for="phone">Phone Number</label>
+                                       <input type="text" id="phone" name="phone">
+                                    </div>
+                                    <div>
+                                       <label for="email">Email</label>
+                                       <input type="email" id="email" name="email" >
+                                    </div>
+                                    <div>
+                                       <label for="message">How did you find my page?</label>
+                                       <input type="text" id="message" name="message">
+                                    </div>
+                                    <div id="formErrors"></div>
+                                    <div>
+                                       <input type="submit" id="submit" value="Submit">
+                                    </div>
+                                 </form>
                               </div>
                            </div>
                         </article>
