--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
          <input type="email" id="email" name="email" >
       </div>
       <div class="contact">
-         <label for="message">How did you find my page?</label>
+         <label for="message">How did you find us?</label>
          <select id="message" name="message">
             <option value="">Select</option>
             <option value="instagram">Instagram</option>
